--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,8 @@
+
+   
+
+
+
 <div class="mt-4 col-8 offset-2">
         <div class="card">
             <div class="card-header">Login Here</div>
@@ -5,6 +10,9 @@
                 <form #loginForm = ngForm (ngSubmit)="onSubmit()">
                     <div class="alert alert-danger" [hidden] = "!error">
                         {{error}}
+                    </div>
+                    <div class="alert alert-success" [hidden] = "!msg">
+                        {{msg}}
                     </div>
                     <div class="form-group row">
                       <label for="inputEmail3"  class="col-sm-2 col-form-label">Email</label>
@@ -19,10 +27,12 @@
                       </div>
                     </div>
                   
-                    <div class="form-group row">
-                      <div class="col-sm-10">
-                        <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Login</button>
+                    <div class="form-group row offset-2">
+                      <div class="col-sm-12">
+                        <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid"  routerLinkActive="router-link-active"  routerLinkActive="router-link-active" routerLinkActive="router-link-active"  >Login</button>
+                        <button type="submit" class="btn btn-primary float-right"   >Register</button>
                       </div>
+                   
                     </div>
                   </form>
             </div>
