--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,3 @@
-<!-- 
-    <nav class="navbar navbar-light bg-primary">
-        <a class="navbar-brand" >Navbar</a>
-        <div>
-            <a class="navbar-brand" routerLink="/login">Login</a>
-             <a class="navbar-brand" routerLink="/logout">Logout</a>
-        </div>
-       
-      </nav>
-     -->
+<nav class="navbar navbar-light bg-light">
+    <h1 >Laravel + Angular Demo Project</h1>
+   </nav>
