--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -11,3 +11,9 @@
 .padding{
     padding-left: 4px;;
 }
+.ng-invalid:not(form){
+    border-left: 5px solid red;
+}
+.ng-valid:not(form){
+    border-left: 5px solid green;
+}
