--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 @import "bootstrap/dist/css/bootstrap.css";
 
-/* .ng-invalid:not(form){
+.ng-invalid:not(form){
     border-left: 5px solid red;
 }
 .ng-valid:not(form){
     border-left: 5px solid green;
-} */
+}
