--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -30,7 +30,7 @@
                     <div class="form-group row offset-2">
                       <div class="col-sm-12">
                         <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid"  routerLinkActive="router-link-active"  routerLinkActive="router-link-active" routerLinkActive="router-link-active"  >Login</button>
-                        <button type="submit" class="btn btn-primary float-right"   >Register</button>
+                        <button type="submit" class="btn btn-primary float-right" [routerLink]="['/register']" routerLinkActive="router-link-active"   >Register</button>
                       </div>
                    
                     </div>
