--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,25 +1,106 @@
-<nav class="navbar navbar-light bg-light">
-    <button  >   <a  class="size" class="navbar-brand offset-2"(click)="logout()">Logout</a></button>
-   </nav>
-   
-   
-     
+<nav class="navbar navbar-light bg-secondary">
 
-  <div class="user-table-wrapper">
-    <ngx-datatable [rows]="rows" >
-        
-        <ngx-datatable-column name="Sr. No" [width]="50" [cellClass]="'table-data-cell'" [canAutoResize]="true" [draggable]="false" [resizeable]="false" [frozenLeft]="true"  > <ng-template let-rowIndex="rowIndex" ngx-datatable-cell-template> {{ rowIndex + 1 }} 
+        <input type="text" style="padding:8px;margin:15px auto;width:30%;"
+            placeholder="Type to filter the name column..." (keyup)="updateFilter($event)" class="filter-data" />
+            <button class="btn btn-success float-right" (click)="logout()" routerLinkActive="router-link-active">Logout</button>
+        </nav>
 
-        </ng-template> </ngx-datatable-column>
-        <ngx-datatable-column name="Name" [cellClass]="'table-data-cell'"  [canAutoResize]="true" [draggable]="false" [resizeable]="false" [frozenLeft]="true"  > 
 
-            <ng-template let-rowIndex="rowIndex" let-row="row"  ngx-datatable-cell-template> {{ row.name}} 
 
-        </ng-template> </ngx-datatable-column>
-        <ngx-datatable-column name="Email" [cellClass]="'table-data-cell'" [canAutoResize]="true" [draggable]="false" [resizeable]="false" [frozenLeft]="true"  > 
-            <ng-template let-rowIndex="rowIndex" let-row="row" ngx-datatable-cell-template> {{ row.email }} 
+<div class="user-table-wrapper">
+    <ngx-datatable [rows]="rows">
 
-        </ng-template> </ngx-datatable-column>
-    
+        <ngx-datatable-column name="Sr. No" [width]="50" [cellClass]="'table-data-cell'" [canAutoResize]="true"
+            [draggable]="false" [resizeable]="false" [frozenLeft]="true">
+            <ng-template let-rowIndex="rowIndex" ngx-datatable-cell-template> {{ rowIndex + 1 }}
+            </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Name" [width]="140" [cellClass]="'table-data-cell'" [canAutoResize]="true"
+            [draggable]="false" [resizeable]="false" [frozenLeft]="true">
+            <ng-template let-rowIndex="rowIndex" let-row="row" ngx-datatable-cell-template> {{ row.name}}</ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Email" [width]="200" [cellClass]="'table-data-cell'" [canAutoResize]="true"
+            [draggable]="false" [resizeable]="false" [frozenLeft]="true">
+            <ng-template let-rowIndex="rowIndex" let-row="row" ngx-datatable-cell-template> {{ row.email }} </ng-template>
+        </ngx-datatable-column>
+
+        <ngx-datatable-column name="Actions" [width]="150" [cellClass]="'table-data-cell'" [canAutoResize]="true"
+            [draggable]="false" [resizeable]="false" [frozenLeft]="true">
+            <ng-template let-rowIndex="rowIndex" let-row="row" ngx-datatable-cell-template> <a class="action-links"
+                    class="color" (click)="openModal(row)">Edit</a> | <a class="color"
+                    (click)=" openDeleteModal(row)">Delete</a>
+            </ng-template>
+        </ngx-datatable-column>
     </ngx-datatable>
-  </div>
+</div>
+            
+
+           
+
+
+
+
+
+
+
+
+
+<div>
+    <modal #myModal>
+        <modal-header>
+            <h2>You can update your data.</h2>
+        </modal-header>
+        <modal-content>
+            <form #updateForm=ngForm>
+                <div class="alert alert-success" [hidden]="!msg">
+                    {{msg}}
+                </div>
+                <div class="alert alert-danger" [hidden]="!error">
+                    {{error}}
+                </div>
+
+                <div class="form-group row">
+                    <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" name="name" required placeholder="Name" [(ngModel)]="form.name" required
+                            class="form-control" id="inputEmail3">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputPassword3" class="col-sm-2 col-form-label">Email</label>
+                    <div class="col-sm-10">
+                        <input type="email" name="email" [(ngModel)]="form.email" required required placeholder="Email"
+                            class="form-control" id="inputPassword3">
+                    </div>
+                </div>
+
+            </form>
+        </modal-content>
+        <modal-footer>
+            <button class="btn btn-primary " [disabled]="!updateForm.valid" (click)="update()">Update</button>
+        </modal-footer>
+    </modal>
+</div>
+
+
+
+
+
+<modal #deleteModal>
+    <!-- <modal-header>
+        <h2>Delete</h2>
+    </modal-header> -->
+    <modal-content>
+        <form #updateForm=ngForm>
+            <h3>Do you want to delete?</h3>
+            <div class="alert alert-success" [hidden]="!msg">
+                {{msg}}
+            </div>
+        </form>
+    </modal-content>
+    <modal-footer>
+        <button class="btn btn-danger" (click)="delete()">Delete</button>
+    </modal-footer>
+</modal>
